--- a/resource/css/myProduct.css
+++ b/resource/css/myProduct.css
@@ -5,5 +5,9 @@ body {
 }
 
 *{
-    border: 1px solid black;
+    /* border: 1px solid black; */
+}
+
+.bg-gray{
+    background-color: rgb(227, 225, 225);
 }
